Script element with an empty for or event attributes should not execute https://bugs.webkit.org/show_bug.cgi?id=148855 <rdar://problem/22588156>

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline existing W3C HTML test now that more checks are passing.

* web-platform-tests/html/semantics/scripting-1/the-script-element/script-for-event-expected.txt:

Source/WebCore:

A script element with an empty for or event attributes should not execute
as per:
https://html.spec.whatwg.org/multipage/scripting.html#prepare-a-script (step 12)

Our implementation had a bug where it would not correctly differentiate
an empty attribute from a missing one. This patch fixes this.

No new tests, already covered by existing test.

* dom/ScriptElement.cpp:
(WebCore::ScriptElement::isScriptForEventSupported):


Canonical link: https://commits.webkit.org/168440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191270 268f45cc-cd09-0410-ab3c-d52691b4dbfc